--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
-version: '3'
+version: "3.5"
 services:
-  web:
+  web-fe:
     build: .
+    command: python app.py
     ports:
-     - "5000:5000"
+      - target: 5000
+        published: 5000
+    networks:
+      - counter-net
     volumes:
-     - .:/code
+      - type: volume
+        source: counter-vol
+        target: /code
   redis:
     image: "redis:alpine"
+    networks:
+      counter-net:
+
+networks:
+  counter-net:
+
+volumes:
+  counter-vol:    
